--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                         <p>thi is the best headphone in the world for people who just want to waste time
                                             in fron of frunky world</p>
                                         <h1>$420</h1>
-                                        <button class="btn btn-warning px-4 py-2 rounded-3">Buy Now</button>
+                                        <button class="btn panda-btn px-4 py-2 rounded-3">Buy Now</button>
                                     </div>
 
                                 </div>
@@ -74,7 +74,7 @@
                                         <p>thi is the best tv in the world for people who just want to waste time
                                             in fron of frunky world</p>
                                         <h1>$1200</h1>
-                                        <button class="btn btn-warning px-4 py-2 rounded-3">Buy Now</button>
+                                        <button class="btn panda-btn px-4 py-2 rounded-3">Buy Now</button>
                                     </div>
 
                                 </div>
@@ -94,7 +94,7 @@
                                         <p>thi is the best x-box in the world for people who just want to waste time
                                             in fron of frunky world</p>
                                         <h1>$600</h1>
-                                        <button class="btn btn-warning px-4 py-2 rounded-3">Buy Now</button>
+                                        <button class="btn panda-btn px-4 py-2 rounded-3">Buy Now</button>
                                     </div>
 
                                 </div>
@@ -169,7 +169,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="m-3">
-                     <button class="btn btn-warning">Buy Now</button>
+                     <button class="btn panda-btn">Buy Now</button>
                     </div>
                   </div>
                 </div>
@@ -182,7 +182,7 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       </div>
                       <div class="m-3">
-                       <button class="btn btn-warning">Buy Now</button>
+                       <button class="btn panda-btn">Buy Now</button>
                       </div>
                     </div>
                   </div>
@@ -195,7 +195,7 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       </div>
                       <div class="m-3">
-                       <button class="btn btn-warning">Buy Now</button>
+                       <button class="btn panda-btn">Buy Now</button>
                       </div>
                     </div>
                   </div>
@@ -219,7 +219,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="m-3">
-                      <button class="btn btn-warning">Buy Now</button>
+                      <button class="btn panda-btn">Buy Now</button>
                     </div>
                   </div>
                 </div>
@@ -232,7 +232,7 @@
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="m-3">
-                      <button class="btn btn-warning">Buy Now</button>
+                      <button class="btn panda-btn">Buy Now</button>
                     </div>
                   </div>
                 </div>
@@ -245,7 +245,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
                     <div class="m-3">
-                      <button class="btn btn-warning">Buy Now</button>
+                      <button class="btn panda-btn">Buy Now</button>
                     </div>
                   </div>
                 </div>
@@ -265,7 +265,7 @@
                 
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
-                <button type="submit" class="btn btn-warning">Submit</button>
+                <button type="submit" class="btn panda-btn">Submit</button>
               </form>
         </div>
     </section>
