--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12 ">
                 <div class="p-3 border bg-success d-flex align-items-center rounded-3 justify-content-center justify-content-around">
-                    <h1 class="text-white">Watch</h1>
+                    <h1 class="text-white">Bag</h1>
                     <img class="w-25" src="images/categories/bag.png" alt="">
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12 ">
                 <div class="p-3 border bg-primary d-flex align-items-center rounded-3 justify-content-center justify-content-around ">
-                    <h1 class="text-white">Watch</h1>
+                    <h1 class="text-white">Shoes</h1>
                     <img class="w-25" src="images/categories/shoes.png" alt="">
                 </div>
               </div>
