--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg fixed-top bg-light ">
-                <div class="container-fluid p-0">
+                <div class="container-fluid">
                     <a class="navbar-brand" href="#">
                         <img src="images/logo.png" alt="">
                     </a>
