--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active border rounded c-info ">
                             <div class="row p-5">
-                                <div class="col-lg-7 d-flex align-items-center">
+                                <div class="col-lg-7 d-flex align-items-center order-lg-1 order-2">
                                     <div class="s-content">
                                         <h1>Cool Dude Headphone</h1>
                                         <p>thi is the best headphone in the world for people who just want to waste time
@@ -58,7 +58,7 @@
                                     </div>
 
                                 </div>
-                                <div class="col-lg-5">
+                                <div class="col-lg-5 order-lg-2 order-1">
                                     <div class="s-img">
                                         <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                                     </div>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="carousel-item c-info">
                             <div class="row p-5">
-                                <div class="col-lg-7 d-flex align-items-center">
+                                <div class="col-lg-7 d-flex align-items-center order-lg-1 order-2">
                                     <div class="s-content">
                                         <h1>Mega LCD TV For Sports</h1>
                                         <p>thi is the best tv in the world for people who just want to waste time
@@ -78,7 +78,7 @@
                                     </div>
 
                                 </div>
-                                <div class="col-lg-5">
+                                <div class="col-lg-5 order-lg-2 order-1">
                                     <div class="s-img">
                                         <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                                     </div>
@@ -88,7 +88,7 @@
                         </div>
                         <div class="carousel-item c-info">
                             <div class="row p-5">
-                                <div class="col-lg-7 d-flex align-items-center">
+                                <div class="col-lg-7 d-flex align-items-center order-lg-1 order-2">
                                     <div class="s-content">
                                         <h1>X-Box for your living room</h1>
                                         <p>thi is the best x-box in the world for people who just want to waste time
@@ -98,7 +98,7 @@
                                     </div>
 
                                 </div>
-                                <div class="col-lg-5">
+                                <div class="col-lg-5 order-lg-2 order-1">
                                     <div class="s-img">
                                         <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
                                     </div>
